2012-03-30  Naveen H.S  <naveen.S@kpitcummins.com>
	    Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.c (push_regs): Skip banked registers when
	resbank attribute is specified.
	(sh_expand_epilogue): Likewise.

2012-03-30  Richard Henderson  <rth@redhat.com>

	PR debug/52727
	* combine-stack-adj.c (prev_active_insn_bb): New.
	(next_active_insn_bb): New.
	(force_move_args_size_note): New.
	(combine_stack_adjustments_for_block): Use it.

2012-03-30  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (struct expand_vec_perm_d): Add one_operand_p.
	(ix86_expand_vector_init_duplicate): Initialize it.
	(expand_vec_perm_palignr): Likewise.
	(ix86_expand_vec_perm_const): Likewise.
	(ix86_vectorize_vec_perm_const_ok): Likewise.
	(expand_vec_perm_blend): Use it.
	(expand_vec_perm_vpermil): Likewise.
	(expand_vec_perm_pshufb): Likewise.
	(expand_vec_perm_1): Likewise.
	(expand_vec_perm_pshuflw_pshufhw): Likewise.
	(expand_vec_perm_interleave2): Likewise.
	(expand_vec_perm_vpermq_perm_1): Likewise.
	(expand_vec_perm_vperm2f128): Likewise.
	(expand_vec_perm_interleave3): Likewise.
	(expand_vec_perm_vperm2f128_vblend): Likewise.
	(expand_vec_perm_vpshufb2_vpermq): Likewise.
	(expand_vec_perm_vpshufb2_vpermq_even_odd): Likewise,.
	(expand_vec_perm_broadcast): Likewise.
	(expand_vec_perm_vpshufb4_vpermq2): Likewise.

2012-03-30  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (gen_variable_die): Initialize off.

2012-03-30  Tristan Gingold  <gingold@adacore.com>

	* config/vms/vms-f.c: New file.
	* config/vms/t-vms (vms-f.o): New rule.
	* config.gcc (*-*-*vms*): Define fortran_target_objs.

2012-03-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52754
	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Only
	propagate arbitrary addresses into really plain dereferences.

2012-03-30  Richard Guenther <rguenther@suse.de>

	PR middle-end/52772
	* except.c (emit_to_new_bb_before): Move loop updating ...